# EddyCurrents-GUI

./: .remote-sync.json  EddyCurrents.cxx  EddyCurrents.cxx~RF41792c5.TMP
Test/: .remote-sync.json  CMakeLists.txt  EddyCurrents.cpp
Test/headers/: Function.h  GaussLaguerre.h  Parameters.h
Test/src/: BesselFirstKind.cpp  Function.cpp  GaussLaguerre.cpp  Parameters.cpp
src/: BesselFirstKind.cpp  BesselFirstKind.h  ClassDef.h  ClassDef.h~RF417894f.TMP  ClassDefRootList.h  Function.cpp  Function.cpp~RF4178911.TMP  Function.h  Function.h~RF41791ac.TMP  GaussLaguerre.cpp  Parameters.cpp  Parameters.cpp~RF4178efc.TMP  Parameters.h  Parameters.h~RF4178d66.TMP
